fixed overflow style

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   height: 100% !important;
   background-image: ("../assets/background-right.jpg");
@@ -11,11 +11,11 @@ body {
   );
   background-repeat: no-repeat;
   background-size: cover;
-}
+} */
 #app {
-  /* height: 100%; */
+  height: 100vh;
   margin: 0 !important;
-  /* background: rgb(2, 0, 36);
+  background: rgb(2, 0, 36);
   background: linear-gradient(
     124deg,
     rgba(2, 0, 36, 1) 0%,
@@ -23,7 +23,7 @@ body {
     rgba(0, 212, 255, 1) 100%
   );
   background-repeat: no-repeat;
-  background-size: cover; */
+  background-size: cover;
   /* background: #948b8b14; */
   /* height: 100%;
   display: flex;
